--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "spatie/laravel-permission": "^6.10",
         "twilio/sdk": "^8.3",
         "tymon/jwt-auth": "^2.1",
-        "yajra/laravel-datatables": "11.0"
+        "yajra/laravel-datatables": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
